[package]
name = "rts"
version = "0.2.0"
edition = "2021"
authors = ["miruji <miruji@protonmail.com>"]
description = "Reactive scripting language of free data structures"
license-file = "LICENCE"
readme = "README.md"

[dependencies]
colored = "2.0"
termion = "1.5"
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true
debug  = false
