[package]
name = "rts"
version = "0.2.0"
edition = "2021"
authors = ["miruji <miruji@protonmail.com>"]
description = "Reactive scripting language of free data structures"
license-file = "LICENCE"
readme = "README.md"

[dependencies]
colored = "2.0"
termion = "1.5"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
overflow-checks = true
debug  = false
